Coding for part 3 of tutorial

--- a/backbone-tutorial-1st.html
+++ b/backbone-tutorial-1st.html
@@ -24,7 +24,8 @@
   <!-- =============== -->
   <script type="text/javascript">
     // your JS code goes here
-    var AppView = Backbone.View.extend({
+    var app = {};
+    app.AppView = Backbone.View.extend({
       el: '#container',
       initialize: function(){
         this.render();
@@ -35,7 +36,7 @@
       }
     });
 
-    var appView = new AppView();
+    app.RenderView = new app.AppView();
   </script>
   
 </body>
